{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 1751,
  "lineage": "76476ce5-ac31-1a0b-1f53-b29dc351fcf6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-pool-compute/providers/Microsoft.Network/networkInterfaces/vmetf3teus-0001-nic",
            "internal_domain_name_suffix": "wifpdrfzemjuphv4ieftc5g4kb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/virtualNetworks/vnet-etf3-test-eus-001/subnets/snet-avd-etf3-test-eus-001"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "7C-ED-8D-DE-C4-84",
            "name": "vmetf3teus-0001-nic",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "rg-avd-etf3-test-eus-pool-compute",
            "tags": {
              "CreationTimeUTC": "2026-02-26T02:12:46Z",
              "Environment": "Test",
              "IdentityProvider": "EntraID",
              "ServiceWorkload": "AVD"
            },
            "virtual_machine_id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-pool-compute/providers/Microsoft.Compute/virtualMachines/vmetf3teus-0001"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vmetf3teus-0001-nic",
            "resource_group_name": "rg-avd-etf3-test-eus-pool-compute",
            "subscription_id": "bd67233d-38af-45db-a98e-a10a2b443d8d"
          },
          "dependencies": [
            "azurerm_network_ddos_protection_plan.ddos",
            "azurerm_resource_group.rg_compute",
            "azurerm_resource_group.rg_network",
            "azurerm_resource_group.rg_single",
            "azurerm_subnet.avd",
            "azurerm_virtual_network.avd",
            "data.azurerm_subnet.existing_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "avd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/networkSecurityGroups/nsg-avd-etf3-test-eus-001",
            "location": "eastus",
            "name": "nsg-avd-etf3-test-eus-001",
            "resource_group_name": "rg-avd-etf3-test-eus-network",
            "security_rule": [],
            "tags": {
              "CreationTimeUTC": "2026-02-26T02:12:46Z",
              "Environment": "Test",
              "IdentityProvider": "EntraID",
              "ServiceWorkload": "AVD"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-avd-etf3-test-eus-001",
            "resource_group_name": "rg-avd-etf3-test-eus-network",
            "subscription_id": "bd67233d-38af-45db-a98e-a10a2b443d8d"
          },
          "dependencies": [
            "azurerm_resource_group.rg_network",
            "azurerm_resource_group.rg_single"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/networkSecurityGroups/nsg-pe-etf3-test-eus-001",
            "location": "eastus",
            "name": "nsg-pe-etf3-test-eus-001",
            "resource_group_name": "rg-avd-etf3-test-eus-network",
            "security_rule": [],
            "tags": {
              "CreationTimeUTC": "2026-02-26T02:12:46Z",
              "Environment": "Test",
              "IdentityProvider": "EntraID",
              "ServiceWorkload": "AVD"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-pe-etf3-test-eus-001",
            "resource_group_name": "rg-avd-etf3-test-eus-network",
            "subscription_id": "bd67233d-38af-45db-a98e-a10a2b443d8d"
          },
          "dependencies": [
            "azurerm_resource_group.rg_network",
            "azurerm_resource_group.rg_single"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "avd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/routeTables/route-avd-etf3-test-eus-001",
            "location": "eastus",
            "name": "route-avd-etf3-test-eus-001",
            "resource_group_name": "rg-avd-etf3-test-eus-network",
            "route": [],
            "subnets": [
              "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/virtualNetworks/vnet-etf3-test-eus-001/subnets/snet-avd-etf3-test-eus-001"
            ],
            "tags": {
              "CreationTimeUTC": "2026-02-26T02:12:46Z",
              "Environment": "Test",
              "IdentityProvider": "EntraID",
              "ServiceWorkload": "AVD"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "route-avd-etf3-test-eus-001",
            "resource_group_name": "rg-avd-etf3-test-eus-network",
            "subscription_id": "bd67233d-38af-45db-a98e-a10a2b443d8d"
          },
          "dependencies": [
            "azurerm_resource_group.rg_network",
            "azurerm_resource_group.rg_single"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/routeTables/route-pe-etf3-test-eus-001",
            "location": "eastus",
            "name": "route-pe-etf3-test-eus-001",
            "resource_group_name": "rg-avd-etf3-test-eus-network",
            "route": [],
            "subnets": [
              "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/virtualNetworks/vnet-etf3-test-eus-001/subnets/snet-pe-etf3-test-eus-001"
            ],
            "tags": {
              "CreationTimeUTC": "2026-02-26T02:12:46Z",
              "Environment": "Test",
              "IdentityProvider": "EntraID",
              "ServiceWorkload": "AVD"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "route-pe-etf3-test-eus-001",
            "resource_group_name": "rg-avd-etf3-test-eus-network",
            "subscription_id": "bd67233d-38af-45db-a98e-a10a2b443d8d"
          },
          "dependencies": [
            "azurerm_resource_group.rg_network",
            "azurerm_resource_group.rg_single"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "avd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/virtualNetworks/vnet-etf3-test-eus-001/subnets/snet-avd-etf3-test-eus-001",
            "name": "snet-avd-etf3-test-eus-001",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-avd-etf3-test-eus-network",
            "service_endpoints": [
              "Microsoft.KeyVault"
            ],
            "virtual_network_name": "vnet-etf3-test-eus-001"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-avd-etf3-test-eus-001",
            "resource_group_name": "rg-avd-etf3-test-eus-network",
            "subscription_id": "bd67233d-38af-45db-a98e-a10a2b443d8d",
            "virtual_network_name": "vnet-etf3-test-eus-001"
          },
          "dependencies": [
            "azurerm_network_ddos_protection_plan.ddos",
            "azurerm_resource_group.rg_network",
            "azurerm_resource_group.rg_single",
            "azurerm_virtual_network.avd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.2.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/virtualNetworks/vnet-etf3-test-eus-001/subnets/snet-pe-etf3-test-eus-001",
            "name": "snet-pe-etf3-test-eus-001",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-avd-etf3-test-eus-network",
            "service_endpoints": [
              "Microsoft.KeyVault",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-etf3-test-eus-001"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-pe-etf3-test-eus-001",
            "resource_group_name": "rg-avd-etf3-test-eus-network",
            "subscription_id": "bd67233d-38af-45db-a98e-a10a2b443d8d",
            "virtual_network_name": "vnet-etf3-test-eus-001"
          },
          "dependencies": [
            "azurerm_network_ddos_protection_plan.ddos",
            "azurerm_resource_group.rg_network",
            "azurerm_resource_group.rg_single",
            "azurerm_virtual_network.avd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "avd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/virtualNetworks/vnet-etf3-test-eus-001/subnets/snet-avd-etf3-test-eus-001",
            "network_security_group_id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/networkSecurityGroups/nsg-avd-etf3-test-eus-001",
            "subnet_id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/virtualNetworks/vnet-etf3-test-eus-001/subnets/snet-avd-etf3-test-eus-001"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_ddos_protection_plan.ddos",
            "azurerm_network_security_group.avd",
            "azurerm_resource_group.rg_network",
            "azurerm_resource_group.rg_single",
            "azurerm_subnet.avd",
            "azurerm_virtual_network.avd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/virtualNetworks/vnet-etf3-test-eus-001/subnets/snet-pe-etf3-test-eus-001",
            "network_security_group_id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/networkSecurityGroups/nsg-pe-etf3-test-eus-001",
            "subnet_id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/virtualNetworks/vnet-etf3-test-eus-001/subnets/snet-pe-etf3-test-eus-001"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_ddos_protection_plan.ddos",
            "azurerm_network_security_group.private_endpoints",
            "azurerm_resource_group.rg_network",
            "azurerm_resource_group.rg_single",
            "azurerm_subnet.private_endpoints",
            "azurerm_virtual_network.avd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "avd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/virtualNetworks/vnet-etf3-test-eus-001/subnets/snet-avd-etf3-test-eus-001",
            "route_table_id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/routeTables/route-avd-etf3-test-eus-001",
            "subnet_id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/virtualNetworks/vnet-etf3-test-eus-001/subnets/snet-avd-etf3-test-eus-001"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_ddos_protection_plan.ddos",
            "azurerm_resource_group.rg_network",
            "azurerm_resource_group.rg_single",
            "azurerm_route_table.avd",
            "azurerm_subnet.avd",
            "azurerm_virtual_network.avd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/virtualNetworks/vnet-etf3-test-eus-001/subnets/snet-pe-etf3-test-eus-001",
            "route_table_id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/routeTables/route-pe-etf3-test-eus-001",
            "subnet_id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/virtualNetworks/vnet-etf3-test-eus-001/subnets/snet-pe-etf3-test-eus-001"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_ddos_protection_plan.ddos",
            "azurerm_resource_group.rg_network",
            "azurerm_resource_group.rg_single",
            "azurerm_route_table.private_endpoints",
            "azurerm_subnet.private_endpoints",
            "azurerm_virtual_network.avd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "avd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c4f10ab2-23b9-4713-9ebe-410b317cde51",
            "id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/virtualNetworks/vnet-etf3-test-eus-001",
            "location": "eastus",
            "name": "vnet-etf3-test-eus-001",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-avd-etf3-test-eus-network",
            "subnet": [
              {
                "address_prefixes": [
                  "10.10.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/virtualNetworks/vnet-etf3-test-eus-001/subnets/snet-avd-etf3-test-eus-001",
                "name": "snet-avd-etf3-test-eus-001",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/routeTables/route-avd-etf3-test-eus-001",
                "security_group": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/networkSecurityGroups/nsg-avd-etf3-test-eus-001",
                "service_endpoints": [
                  "Microsoft.KeyVault"
                ]
              },
              {
                "address_prefixes": [
                  "10.10.2.0/27"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/virtualNetworks/vnet-etf3-test-eus-001/subnets/snet-pe-etf3-test-eus-001",
                "name": "snet-pe-etf3-test-eus-001",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/routeTables/route-pe-etf3-test-eus-001",
                "security_group": "/subscriptions/bd67233d-38af-45db-a98e-a10a2b443d8d/resourceGroups/rg-avd-etf3-test-eus-network/providers/Microsoft.Network/networkSecurityGroups/nsg-pe-etf3-test-eus-001",
                "service_endpoints": [
                  "Microsoft.KeyVault",
                  "Microsoft.Storage"
                ]
              }
            ],
            "tags": {
              "CreationTimeUTC": "2026-02-26T02:12:46Z",
              "Environment": "Test",
              "IdentityProvider": "EntraID",
              "ServiceWorkload": "AVD"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-etf3-test-eus-001",
            "resource_group_name": "rg-avd-etf3-test-eus-network",
            "subscription_id": "bd67233d-38af-45db-a98e-a10a2b443d8d"
          },
          "dependencies": [
            "azurerm_network_ddos_protection_plan.ddos",
            "azurerm_resource_group.rg_network",
            "azurerm_resource_group.rg_single"
          ]
        }
      ]
    }
  ]
}